<resources>
    <string name="app_name">Coin</string>
    <string name="incomeTitleValue">Long Term Income</string>
    <string name="incomeDescriptionValue">Description</string>
    <string name="incomeValue">Income</string>
    <string name="incomeHintValue">$ Dollars earned</string>
    <string name="otherPeriodValue">Number of Days</string>
    <string name="perValue">per</string>
    <string name="addIncomeButtonValue">Add Income</string>
    <string name="addNewIncomeValue">Add New Income</string>
    <string name="nextValue">Next</string>
    <string name="removeValue">Remove</string>
    <string name="addNewExpenseValue">Add New Expense</string>
    <string name="previousValue">previous</string>
    <string name="expenseValue">Expenses</string>
    <string name="expenseTitleValue">Long Term Expenses</string>
    <string name="expenseHintValue">$ Dollars Spent</string>
    <string name="addExpenseButtonValue">Add Expense</string>
    <string name="longTermSavingValue">Long Term Savings</string>
    <string name="savingHintValue">$ Dollars to Save</string>
    <string name="addSavingsValue">Add Savings</string>
    <string name="percentValue">Percent of Remaining</string>
    <string name="dollarValue">Dollar Amount</string>
    <string name="accountForTaxValue">Before Taxes (AB)</string>
    <string-array name="incomePeriodValues">
        <item>per Week</item>
        <item>per 2 Weeks</item>
        <item>per Month</item>
        <item>per Year</item>
        <item>per Other Period</item>
    </string-array>
    <string name="title_activity_main_add_saving_l_t">MainAddSavingLT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addNewSavingValue">Add New Saving</string>
    <string name="goalSavingValue">Short Term Savings</string>
    <string name="selectDateValue">by this Date [Select to Change]</string>
    <string name="savingGoalsValue">Saving Goals</string>
    <string name="loadingValue">Loading Data...</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_main_tabs">MainTabs</string>
    <string name="tab_text_1">Main</string>
    <string name="tab_text_2">Parameters</string>
    <string name="title_activity_main_tab">MainTab</string>
    <string name="tab_text_3">Spenditure</string>
    <string name="spenditureValue">Weekly Spenditure</string>
    <string name="spendingTitleValue">Spending</string>
    <string name="spendingOrIncome">Add instead of subtract</string>
    <string name="dollarSpentAmount">$ Dollars Spent</string>
    <string name="necessityValue">Necessity</string>
    <string name="spendValue">Sub Money</string>
    <string name="notSpendValue">Add Money</string>
    <string name="notNecessityValue">Desire</string>
    <string name="addSpendingValue">Add Spending</string>
    <string name="updateExplainValue">Changes to weekly allowance will be reflected at the start of the next week.</string>
    <string name="tab_text_4">Record</string>
    <string name="totalRecordValue">Total Spending Record</string>
    <string name="moveDialogDescValue">Please choose where the remaining funds should be put.</string>
    <string name="confirmValue">Confirm</string>
    <string name="importValue">Do you have a separate file in your "Downloads" to import?</string>
    <string name="yesValue">Yes, Import</string>
    <string name="noButtonValue">No, Proceed Without</string>
    <string name="incomeNoteValue">Note</string>
    <string-array name="spendingTypeValues">
        <item>Groceries</item>
        <item>Dining</item>
        <item>Entertainment</item>
        <item>Gift</item>
        <item>Home</item>
        <item>Self</item>
        <item>Hobby</item>
        <item>Repair</item>
        <item>Utility</item>
        <item>Other</item>
    </string-array>
</resources>