<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSpending">

    <TextView
        android:id="@+id/spendingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/spendingTitleValue"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/spendOrIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:checked="true"
        android:text="@string/spendValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendingTitle" />

    <Switch
        android:id="@+id/necessityOrDesire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:text="@string/necessityValue"
        android:textOff="@string/notNecessityValue"
        android:textOn="@string/necessityValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendingDesc"/>

    <Spinner
        android:id="@+id/selectSpendingDesc"
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="@+id/spendingDesc"
        app:layout_constraintStart_toStartOf="@+id/spendingDesc"
        app:layout_constraintTop_toBottomOf="@+id/spendingAmount" />

    <EditText
        android:id="@+id/spendingDesc"
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/incomeNoteValue"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectSpendingDesc" />

    <EditText
        android:id="@+id/spendingAmount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/dollarSpentAmount"
        android:inputType="numberDecimal"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spendOrIncome" />

    <Spinner
        android:id="@+id/selectSource"
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/addSpendBut"
        app:layout_constraintEnd_toEndOf="@+id/spendingDesc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/spendingDesc" />

    <Button
        android:id="@+id/addSpendBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:onClick="addSpendingToList"
        android:text="@string/addSpendingValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>