<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIncome">

    <TextView
        android:id="@+id/incomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/incomeTitleValue"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/incomeDesc"
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/incomeDescriptionValue"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/incomeAmount"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="end"
        android:hint="@string/incomeHintValue"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeDesc" />

    <Spinner
        android:id="@+id/selectIncomePeriod"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/incomeAmount"
        app:layout_constraintTop_toTopOf="@+id/incomeAmount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:id="@+id/manualIncomePeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectIncomePeriod"
        tools:visibility="invisible">

        <EditText
            android:id="@+id/setIncomePeriod"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start"
            android:hint="@string/otherPeriodValue"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/perInput"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/perValue"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/setIncomePeriod"
            app:layout_constraintTop_toTopOf="@+id/setIncomePeriod" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addIncomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:onClick="addIncomeToList"
        android:text="@string/addIncomeButtonValue"
        app:backgroundTint="@color/myGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/showIncomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/myGreen"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualIncomePeriod" />

    <Switch
        android:id="@+id/switchTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountForTaxValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>