<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSavingLongTerm">

    <TextView
        android:id="@+id/savingLTTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/longTermSavingValue"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/savingLTDesc"
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/incomeDescriptionValue"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/percentLayout"
        android:layout_width="400dp"
        android:layout_height="155dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountVPercent"
        tools:visibility="invisible">

        <SeekBar
            android:id="@+id/percentRemainingSlider"
            style="@android:style/Widget.DeviceDefault.Light.SeekBar"
            android:layout_width="366dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:max="20"
            android:progress="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percentOfRemaining" />

        <EditText
            android:id="@+id/percentOfRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/percentValue"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/amountLayout"
        android:layout_width="396dp"
        android:layout_height="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingLTDesc">

        <Spinner
            android:id="@+id/selectSavingLTPeriod"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/savingLTAmount"
            app:layout_constraintTop_toTopOf="@+id/savingLTAmount" />

        <EditText
            android:id="@+id/savingLTAmount"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="end"
            android:hint="@string/savingHintValue"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/manualSavingLTPeriod"
        android:layout_width="377dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountLayout"
        tools:visibility="invisible">

        <EditText
            android:id="@+id/setSavingLTPeriod"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start"
            android:hint="@string/otherPeriodValue"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/perInput"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/perValue"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/setSavingLTPeriod"
            app:layout_constraintTop_toTopOf="@+id/setSavingLTPeriod" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addSavingLTButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:onClick="addSavingLTToList"
        android:text="@string/addSavingsValue"
        app:backgroundTint="@color/myGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/showSavingLTText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/myGreen"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualSavingLTPeriod" />

    <Switch
        android:id="@+id/amountVPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingLTDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>